--- a/cssPSfive.html
+++ b/cssPSfive.html
@@ -19,14 +19,19 @@
             background-color: black;
             color: white;
             height: 60px;
+            position: sticky;
+            top: 0;
+            z-index: 4;  /*to place an element on top of something*/
         }
 
         header nav ul li {
             display: inline;
+            font-size: 1vw;  /*responsive*/
+            padding: 0 13px;
         }
 
         ul {
-            padding: 16px;
+            padding: 21px;
         }
 
         .container {
@@ -52,7 +57,6 @@
             height: 50vh; /*viewport height*/
             margin: auto;
             text-align: center;
-            z-index: 4; 
         }
 
         .box2 p {
@@ -72,7 +76,7 @@
             bottom: 50px;
             left: 250px;
             right: 50px;
-            z-index: 2;  /*to place an element on top of something*/
+            z-index: 2;   
         }
 
         .box3 {
